rnsc/test_data/integration/error/parser/outside_class_directive/string_literal.rns
"Hello World"
.class public HelloWorld
